Fri Dec 29 16:07:42 UTC 2006  Chad Elliott  <elliott_c@ociweb.com>

        * modules/OptionProcessor.pm:

          Updated with the latest version.

        * tests/options/build_entry.txt:

          Updated to reflect my change from Mon Dec 18 13:48:15 UTC 2006.

Tue Dec 19 18:19:29 UTC 2006  Chad Elliott  <elliott_c@ociweb.com>

        * expected/*/vc7/*.vcproj:
        * expected/*/vc71/*.vcproj:
        * expected/*/vc8/*.vcproj:

          Updated to reflect my change from Tue Dec 19 18:02:21 UTC 2006.

Tue Dec 19 15:55:34 UTC 2006  Chad Elliott  <elliott_c@ociweb.com>

        * expected/*/automake/*/Makefile.am:

          Updated to reflect J.T. Conklin's changes from Tue Dec 19 01:29:01
          2006 to Tue Dec 19 07:41:59 2006 and my change from Tue Dec 19
          18:02:21 UTC 2006.

Tue Dec 19 13:37:23 UTC 2006  Chad Elliott  <elliott_c@ociweb.com>

        * expected/options/nmake/Makefile_Zargaflan.mak:
        * expected/options/nmake/source/Makefile_Zargaflan.mak:

          Renamed to reflect my change from Mon Dec 18 13:48:15 UTC 2006.

        * expected/options/nmake/Makefile_Zargaflan.nmak:
        * expected/options/nmake/source/Makefile_Zargaflan.nmak:

          Removed these files.

Fri Dec 15 13:08:36 UTC 2006  Chad Elliott  <elliott_c@ociweb.com>

        * expected/flex_bison/*:
        * tests/flex_bison/build_entry.txt:
        * tests/flex_bison/bus.l:
        * tests/flex_bison/bus.y:
        * tests/flex_bison/flex_bison.mpc:

           Added a new test to use the flex and bison base projects.

        * run_tests.pl:

          Set the PWD environment before building for gnuace.

        * utils/add_expected_directories.sh:

          Changed to only add directories that haven't been added yet.

Thu Dec 14 14:39:50 UTC 2006  Chad Elliott  <elliott_c@ociweb.com>

        * expected/features_custom_only/nmake/source/Makefile.other.mak:

          Fixed line endings.
